--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,14 @@ services:
       - 80:80
       - 443:443
     volumes:
-      - ./data/conf/nginx:/etc/nginx/conf.d
+      - ./data/conf/nginx:/etc/nginx
       - ./data/conf/php:/etc/php7
       - ./data/site:/data/site
+      - ./data/log:/data/log
       - ./data/log:/var/lib/nginx/logs
       - ./data/log:/var/log/nginx
+    ulimits:
+      nproc: 65535
+      nofile:
+        soft: 20000
+        hard: 40000
