添加wp配置，修改php配置

--- a/data/conf/nginx/php.conf
+++ b/data/conf/nginx/php.conf
@@ -1,7 +1,8 @@
 location ~ \.php$
 {
-	fastcgi_pass unix:/data/php-fpm.sock;
+	fastcgi_pass 127.0.0.1:9000;
 	fastcgi_index index.php;
+	#include /etc/nginx/fastcgi.conf;
 	include /etc/nginx/fastcgi_params;
 	fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
 }
