--- a/data/conf/nginx/conf.d/hello.conf
+++ b/data/conf/nginx/conf.d/hello.conf
@@ -1,30 +1,21 @@
 server
 {
 	listen 80 default_server;
+	server_name _;
 	root /data/site/hello;
 
 	location /
 	{
-		index index.html index.htm index.php;
+		index index.html index.htm;
 	}
 	include /etc/nginx/php.conf;
-	location ~* \.(jpg|jpeg|gif|png|css|js|ico|xml)$
-	{
-		expires 5d;
-	}
-	location ~ /\.
-	{
-		log_not_found off;
-		deny all;
-	}
 	location ~ ^/(fpm-status|fpm-ping)$
 	{
 		access_log off;
-		allow 127.0.0.1;
 		deny all;
 		include /etc/nginx/fastcgi_params;
 		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-		fastcgi_pass unix:/data/php-fpm.sock;
+		fastcgi_pass 127.0.0.1:9000;
 	}
 
 	access_log /data/log/hello.log;
