--- a/data/conf/php/php-fpm.d/www.conf
+++ b/data/conf/php/php-fpm.d/www.conf
@@ -33,8 +33,8 @@ group = www-data
 ;                            (IPv6 and IPv4-mapped) on a specific port;
 ;   '/path/to/unix/socket' - to listen on a unix socket.
 ; Note: This value is mandatory.
-;listen = 0.0.0.0:9000
-listen = /data/php-fpm.sock
+listen = 0.0.0.0:9000
+;listen = /data/php-fpm.sock
 
 ; Set listen(2) backlog.
 ; Default Value: 511 (-1 on FreeBSD and OpenBSD)
@@ -100,8 +100,8 @@ listen.mode = 0660
 ;             pm.process_idle_timeout   - The number of seconds after which
 ;                                         an idle process will be killed.
 ; Note: This value is mandatory.
-;pm = dynamic
-pm = ondemand
+pm = dynamic
+;pm = ondemand
 
 ; The number of child processes to be created when pm is set to 'static' and the
 ; maximum number of child processes when pm is set to 'dynamic' or 'ondemand'.
@@ -117,7 +117,7 @@ pm.max_children = 4
 ; The number of child processes created on startup.
 ; Note: Used only when pm is set to 'dynamic'
 ; Default Value: min_spare_servers + (max_spare_servers - min_spare_servers) / 2
-pm.start_servers = 15
+pm.start_servers = 5
 
 ; The desired minimum number of idle server processes.
 ; Note: Used only when pm is set to 'dynamic'
@@ -127,7 +127,7 @@ pm.min_spare_servers = 1
 ; The desired maximum number of idle server processes.
 ; Note: Used only when pm is set to 'dynamic'
 ; Note: Mandatory when pm is set to 'dynamic'
-pm.max_spare_servers = 30
+pm.max_spare_servers = 10
 
 ; The number of seconds after which an idle process will be killed.
 ; Note: Used only when pm is set to 'ondemand'
@@ -138,7 +138,7 @@ pm.max_spare_servers = 30
 ; This can be useful to work around memory leaks in 3rd party libraries. For
 ; endless request processing specify '0'. Equivalent to PHP_FCGI_MAX_REQUESTS.
 ; Default Value: 0
-pm.max_requests = 1200
+pm.max_requests = 1000
 
 ; The URI to view the FPM status page. If this value is not set, no URI will be
 ; recognized as a status page. It shows the following informations:
@@ -422,4 +422,4 @@ ping.path = /fpm-ping
 ;php_flag[display_errors] = off
 ;php_admin_value[error_log] = /var/log/php7/$pool.error.log
 php_admin_flag[log_errors] = on
-php_admin_value[memory_limit] = 4M
+php_admin_value[memory_limit] = 8M
