修改hello配置，添加gotty用作web-shell

--- a/data/conf/nginx/conf.d/hello.conf
+++ b/data/conf/nginx/conf.d/hello.conf
@@ -3,11 +3,9 @@ server
 	listen 80 default_server;
 	server_name _;
 	root /data/site/hello;
+	index index.html index.htm index.php;
 
-	location /
-	{
-		index index.html index.htm;
-	}
+	location / {}
 	include /etc/nginx/php.conf;
 	location ~ ^/(fpm-status|fpm-ping)$
 	{
