--- a/data/conf/supervisord.conf
+++ b/data/conf/supervisord.conf
@@ -22,3 +22,13 @@ stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 autorestart=true
 startretries=0
+
+[program:gotty]
+command=/root/go/bin/gotty -p 7070 -w /bin/zsh
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
+autorestart=true
+startretries=0
+
