--- a/data/conf/nginx/conf.d/hello.conf
+++ b/data/conf/nginx/conf.d/hello.conf
@@ -5,11 +5,13 @@ server
 	root /data/site/hello;
 	index index.html index.htm index.php;
 
-	location / {}
-	include /etc/nginx/php.conf;
+	include /data/nginx/common.conf;
+	include /data/nginx/php.conf;
+
 	location ~ ^/(fpm-status|fpm-ping)$
 	{
 		access_log off;
+		allow 127.0.0.1;
 		deny all;
 		include /etc/nginx/fastcgi_params;
 		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
