--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,12 +8,10 @@ services:
       - 443:443
       - 7070:7070
     volumes:
-      - ./data/conf/nginx:/etc/nginx
-      - ./data/conf/php:/etc/php7
+      - ./data/conf/nginx:/data/conf/nginx
+      - ./data/conf/php/conf.d:/etc/php7/conf.d
       - ./data/site:/data/site
       - ./data/log:/data/log
-      - ./data/log:/var/lib/nginx/logs
-      - ./data/log:/var/log/nginx
     ulimits:
       nproc: 65535
       nofile:
