--- a/data/conf/nginx/conf.d/hello.conf
+++ b/data/conf/nginx/conf.d/hello.conf
@@ -5,8 +5,8 @@ server
 	root /data/site/hello;
 	index index.html index.htm index.php;
 
-	include /data/nginx/common.conf;
-	include /data/nginx/php.conf;
+	include /data/conf/nginx/common.conf;
+	include /data/conf/nginx/php.conf;
 
 	location ~ ^/(fpm-status|fpm-ping)$
 	{
