--- a/data/conf/nginx/nginx.conf
+++ b/data/conf/nginx/nginx.conf
@@ -32,5 +32,5 @@ http {
 
 	access_log /data/log/access.log main;
 	
-	include /data/nginx/conf.d/*.conf;
+	include /data/conf/nginx/conf.d/*.conf;
 }
