--- a/data/conf/nginx/nginx.conf
+++ b/data/conf/nginx/nginx.conf
@@ -2,7 +2,7 @@ user www-data;
 worker_processes auto;
 pcre_jit on;
 error_log /data/log/error.log warn;
-pid /data/nginx.pid;
+pid /data/run/nginx.pid;
 include /etc/nginx/modules/*.conf;
 
 events {
