--- a/data/conf/php/php-fpm.conf
+++ b/data/conf/php/php-fpm.conf
@@ -1,6 +1,6 @@
 [global]
-pid = /data/php-fpm7.pid
-error_log = /tmp/php-fpm.log
+pid = /data/run/php-fpm7.pid
+error_log = /data/log/php-fpm.log
 events.mechanism = epoll
 rlimit_files = 10240
 rlimit_core = 0
