--- a/data/conf/nginx/rewrite/wordpress.conf
+++ b/data/conf/nginx/rewrite/wordpress.conf
@@ -2,7 +2,7 @@ location /
 {
 	if (-f $request_filename/index.html)
 	{
-		rewrite (.*) $1/index.html break;
+		rewrite (.*) $1/index.html break; 
 	}
 	if (-f $request_filename/index.php)
 	{
@@ -13,3 +13,5 @@ location /
 		rewrite (.*) /index.php;
 	}
 }
+
+rewrite /wp-admin$ $scheme://$host$uri/ permanent;
