--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       - ./data/conf/nginx:/data/conf/nginx
       - ./data/site:/data/site
       - ./data/log:/data/log
+      - ./data/key:/data/key
     ulimits:
       nproc: 65535
       nofile:
