--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,29 @@
-version: '3'
+version: "3"
 
 services:
   web:
-    image: flxxyz/alpine-nginx-php7:latest
+    build: ./nginx
+    restart: always
     ports:
-      - 80:80
-      - 443:443
-      - 7070:7070
+      - "80:80"
+      - "443:443"
     volumes:
-      - ./data/conf/nginx:/data/conf/nginx
-      - ./data/site:/data/site
-      - ./data/log:/data/log
-      - ./data/key:/data/key
-    ulimits:
-      nproc: 65535
-      nofile:
-        soft: 20000
-        hard: 40000
+      - ./conf:/etc/nginx/conf.d
+      - ./log:/var/log/nginx
+      - ./wwwroot:/usr/share/nginx/html
+    depends_on:
+      - default
+    networks:
+      - site
+  default:
+    restart: always
+    build: ./fpm
+    volumes:
+      - ./wwwroot/default:/var/www/html
+    networks:
+      - site
+
+networks:
+  site:
+    driver: bridge
+
