--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,6 +4,8 @@ worker_processes  auto;
 error_log  /var/log/nginx/error.log warn;
 pid        /var/run/nginx.pid;
 
+load_module "/usr/lib/nginx/modules/ngx_http_fancyindex_module.so";
+
 events {
     worker_connections  10240;
 }
@@ -29,5 +31,5 @@ http {
         ''      close;
     }
 
-    include /etc/nginx/conf.d/*.conf;
+    include /usr/share/nginx/html/*/conf/nginx.conf;
 }
