--- a/wwwroot/lavarels/conf/nginx.conf
+++ b/wwwroot/lavarels/conf/nginx.conf
@@ -1,8 +1,24 @@
+gzip_min_length 1024;
+gzip_comp_level 2;
+gzip_types text/plain text/css text/javascript application/json application/javascript application/x-javascript application/xml application/x-httpd-php image/jpeg image/gif image/png font/ttf font/otf image/svg+xml;
+gzip_disable "msie6";
+
+upstream swoole {
+    server laravels:9501 weight=5 max_fails=3 fail_timeout=30s;
+    keepalive 16;
+}
+
 server {
   listen 80;
-  server_name default-cli.test;
+  server_name laravels.test;
+  root /usr/share/nginx/html/laravels/public;
+  index index.html index.htm;
 
-  location /
+  location = /favicon.ico { access_log off; log_not_found off; }
+  location ~ \.php$ { return 404; }
+  location / { try_files $uri @homepage ; }
+
+  location @homepage 
   {
     proxy_http_version 1.1;
     proxy_set_header   Host $host;
@@ -20,7 +36,7 @@ server {
     # http
     proxy_set_header Connection "keep-live";
 
-    proxy_pass http://default-cli:9501;
+    proxy_pass http://swoole;
   }
 
   location /channel
@@ -46,9 +62,9 @@ server {
     proxy_read_timeout 1d;
     proxy_send_timeout 1d;
 
-    proxy_pass http://default-cli:9502;
+    proxy_pass http://swoole;
   }
  
-  error_log /var/log/nginx/default-cli.error.log;
-  access_log /var/log/nginx/default-cli.access.log;
+  error_log /var/log/nginx/laravels.error.log;
+  access_log /var/log/nginx/laravels.access.log;
 }
